--- a/investment.html
+++ b/investment.html
@@ -24,7 +24,7 @@
           <h2 class="text-type4 fz20">자료실</h2>
           <div class="text-type4 fw400 fz14 pt12">다양한 투자상품에 대한 강의자료입니다</div>
         </div>
-        <div class="img-wrap2 mt23" onclick="alert('준비중입니다')">
+        <div class="img-wrap2" onclick="alert('준비중입니다')">
           <img src="images/@img_media7.png" alt="">
         </div>
         
