--- a/analysis.html
+++ b/analysis.html
@@ -25,7 +25,7 @@
           <li><a class="btn-tab-type2 active" href="analysis.html">금융 분석</a></li>
         </ul>
         <div class="title-main pt36 px16">
-          <h2 class="text-type4 fz20" onclick="alert('준비중입니다')">투자건전성지표 <img src="images/ico_info.svg" alt=""></h2>
+          <h2 class="text-type4 fz20">투자건전성지표 <img src="images/ico_info.svg" alt="" onclick="alert('준비중입니다')"></h2>
           <div class="text-type4 fw400 fz14 pt12">투자 성향별 적합상품 및<br>상품별 위험도 분류</div>
         </div>
         <div class="px16 mt14">
